--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -106,7 +106,6 @@ input {
 }
 
 
-
 .p-container span select {
     border-top-left-radius: 4px solid #e0e0e0;
     border-bottom-left-radius: 4px solid #e0e0e0;
@@ -246,123 +245,9 @@ label {
     margin-top: -10px;
 }
 
-@media only screen and (max-width: 1295px) {
-    .put2 {
-    width: 110%;
-    margin-left: 10px;
-}
-
-.pott {
-    margin-bottom: 20px;
-    
-}
-.put1 {
-    width: 95%;
-    margin-right: 0px;
-}
-
-.pet {
-    width: 100%;
-    position: relative;
-    margin-right: 10px;
-}
-
-.pat {
-    width: 100%;
-    margin-left: 15px;
-    position: relative;
-}
-
-.name .lab {
-    padding-left: 10px;
-}
-
-.name .lab1 {
-    padding-left: 15px;
-}
 
 
-/* .name .spin {
-   
-    position: absolute;
-    top: 565px;
-    left: 750px;
-   
-}
-
-.name span {
-    
-    position: absolute;
-    top: 565px;
-    left: 555px;
-} */
-
-.p-container input {
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    width: 54%;
-    margin-left: 0px;
-}
-
-.p-container span select {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    border: 1px solid #e0e0e0;
-    width: 70px;
-    height: 50px;
-}
-
-}
-
-@media only screen and (max-width: 1210px) {
-    .put2 {
-    width: 100%;
-    margin-left: 10px;
-}
-
-.put1 {
-    width: 100%;
-    margin-right: 10px;
-}
-
-.pet {
-    width: 100%;
-    position: relative;
-    margin-right: 10px;
-}
-
-.pat {
-    width: 100%;
-    margin-left: 10px;
-    position: relative;
-}
-
-.name .spin {
-   
-    position: absolute;
-    top: 519px;
-    left: 861px;
-   
-}
-
-.name span {
-    
-    position: absolute;
-    top: 519px;
-    left: 671px;
-}
-
-.p-container input {
-    
-    width: 56%;
-    margin-left: 0px;
-}
-
-}
-
-@media only screen and (max-width: 1175px) {
+@media only screen and (max-width: 1030px) {
     .put2 {
     width: 81%;
     margin-left: 1px;
@@ -405,9 +290,6 @@ label {
     padding-left: 3px;
 }
 
-.name .lab1 {
-    padding-left: 3px;
-}
 
 label {
    
@@ -415,9 +297,24 @@ label {
     font-weight: 400;
 }
 
+.name .lab1 {
+    padding-left: 1px;
+}
+
+.radio p {
+   font-size: 8px;
+}
+
+
 }
 
 @media only screen and (max-width: 995px) {
+
+.pot {
+    width: 54%;
+}
+
+
     .put2 {
     width: 75%;
     margin-left: 0px;
@@ -486,6 +383,12 @@ label {
 }
 
 
+
+.radio p {
+   font-size: 8px;
+}
+
+
 }
 
 @media only screen and (max-width: 963px) {
@@ -531,6 +434,11 @@ form label {
 }
 
 @media only screen and (max-width: 930px) {
+    .pot {
+        width: 49%;
+    }
+
+
     .put2 {
     width: 75%;
     margin-left: -25px;
@@ -571,59 +479,82 @@ form label {
 
 .p-container input {
     
-    width: 47%;
+    width: 44%;
+    
+}
+
+
+
+.radio p {
+   font-size: 7px;
+}
+
+
+}
+
+@media only screen and (max-width: 910px) {
+    .pot {
+        width: 51%;
+    }
+
+.p-container input {
+    
+    width: 45%;
+    
+}
+
+}
+
+@media only screen and (max-width: 870px) {
+    .pot {
+        width: 52%;
+    }
+
+.p-container input {
+    
+    width: 46%;
+    
+}
+
+}
+
+@media only screen and (max-width: 850px) {
+    .pot {
+        width: 54%;
+    }
+
+.p-container input {
+    
+    width: 48%;
     
 }
 
 }
 
 @media only screen and (max-width: 825px) {
-    .put2 {
-    width: 79%;
-    margin-left: -45px;
-}
-
-.put1 {
-    width: 65%;
-    margin-right: 0px;
-}
-
-.pet {
-    width: 65%;
-    position: relative;
-    margin-right: 1px;
-}
-
-.pat {
-    width: 79%;
-    margin-left: -45px;
-    position: relative;
-}
-
-
-.name .lab {
-   margin-left: -36px;
-}
-
-.name .lab1 {
-    margin-left: -35px;
-    
-}
-
-form label {
-    color: #00070f;
-    font-size: 10px;
-    
-}
+    .pot {
+        width: 56%;
+    }
 
 .p-container input {
-    width: 45%;
+    
+    width: 49%;
+    
+}
+    
 }
 
-.login-bottom {
-    margin-left: -95px;
-}
+@media only screen and (max-width: 805px) {
+    .pot {
+        width: 60%;
+    }
 
+.p-container input {
+    
+    width: 54%;
+    
+}
+    
 }
 
 @media only screen and (max-width: 750px) {
@@ -649,12 +580,12 @@ input {
 
 .p-container input {
     
-    width: 62%;
+    width: 65%;
     margin-left: 0px;
 }
 
 .pot {
-    width: 70%;
+    width: 71%;
     
 }
 
@@ -755,111 +686,447 @@ label {
 
 }
 
+@media only screen and (max-width: 685px) {
+    .p-container input {
+    
+        width: 63%;
+        margin-left: 0px;
+    }
+   
+}
+
+@media only screen and (max-width: 685px) {
+    .p-container input {
+    
+        width: 61%;
+        margin-left: 0px;
+    }
+   
+}
+
+@media only screen and (max-width: 617px) {
+    .p-container input {
+    
+        width: 60%;
+        margin-left: 0px;
+    }
+
+    .radio p {
+        font-size: 5px;
+     }
+     
+   
+}
+
+@media only screen and (max-width: 590px) {
+    .p-container input {
+    
+        width: 58%;
+        margin-left: 0px;
+    }
+   
+}
+
+@media only screen and (max-width: 570px) {
+    .p-container input {
+    
+        width: 58%;
+        margin-left: 0px;
+    }
+
+    .login-bottom {
+    
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 50px;
+        margin-left: -35px;
+    }
+   
+}
+
+@media only screen and (max-width: 564px) {
+    .p-container input {
+    
+        width: 60%;
+        margin-left: 0px;
+    }
+
+    .p-container span select {
+         width: 60px;
+    }
+
+    .login-bottom {
+    
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 50px;
+        margin-left: -35px;
+    }
+
+    .radio p {
+        font-size: 4px;
+     }
+     
+   
+}
+
+@media only screen and (max-width: 550px) {
+    .p-container input {
+    
+        width: 60%;
+        margin-left: 0px;
+    }
+
+    .p-container span select {
+         width: 60px;
+    }
+
+    .login-bottom {
+    
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 50px;
+        margin-left: -35px;
+    }
+
+    .radio p {
+        font-size: 4px;
+     }
+     
+   
+}
+
+@media only screen and (max-width: 500px) {
+    .p-container input {
+    
+        width: 55%;
+        margin-left: 0px;
+    }
+
+    .p-container span select {
+         width: 60px;
+    }
+
+    .login-bottom {
+    
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 50px;
+        margin-left: -35px;
+    }
+
+    .radio p {
+        font-size: 4px;
+     }
+     
+   
+}
+
+
 @media only screen and (max-width: 430px) {
+    .login-head {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+  
+    .login-main {
+        width: 100%;
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        }
 
+        .login-main h1 {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            padding-left: 0px;
+            margin-left: -20px;
+            margin-top: 20px;
+        }
+    
+        form {
+            width: 100%;
+           
+           margin-left: 40px;
+           align-content: center;
+          
+        }
+    
+        .p-container input {
+    
+            width: 58%;
+            margin-left: 0px;
+        }
+
+
+  
+
+}
+
+@media only screen and (max-width: 425px) {
+
+        
+    
+        .p-container input {
+    
+            width: 54%;
+            margin-left: 0px;
+        }
+
+
+  
+
+}
+
+@media only screen and (max-width: 396px) {
+
+
+    .pot {
+        width: 81%;
+        
+    }
+
+    .put2 {
+        width: 81%;
+        
+    }
+    
+    .put1 {
+        width: 81%;
+        
+    }
+    
+    .pet {
+        width: 81%;
+       
+    }
+    
+    .pat {
+        width: 81%;
+        
+    }
+
+    
+    .p-container span select {
+        width: 52px;
+        
+    }
+    
+    .p-container input {
+        
+        width: 68%;
+        
+    }
+    
    
+    .radio p {
+       font-size: 4px;
+    }
 
-.p-container input {
+    .button {
+        width:81%;
+    }
+
+    .login-bottom {
     
-    width: 57%;
-    margin-left: 0px;
-}
-
-
-
-.login-main h1 {
-    width: 100%;
-    font-size: 25px;
-    font-weight: 700;
-    margin-right: 50px;
-
-}
-
-
-
-.login-bottom {
+        width: 120%;
+        margin-left: -35px;
+    }
     
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
-    margin-left: -25px;
-}
-
-
 
 }
 
-@media only screen and (max-width: 332px) {
+@media only screen and (max-width: 381px) {
 
-   
 
-.p-container input {
     
-    width: 56%;
-    margin-left: 0px;
-}
-
-.p-container span select {
-    border-top-left-radius: 4px solid #e0e0e0;
-    border-bottom-left-radius: 4px solid #e0e0e0;
+    .p-container span select {
+        width: 52px;
+        
+    }
     
-    width: 50px;
-    height: 50px;
-}
-
-.login-bottom {
-    
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
-    margin-left: -15px;
-}
-
-.radio p {
-    font-family: 'Mulish';
-    font-weight: 100;
-    font-size: 5px;
-    color:rgba(11, 34, 57, 0.73);
-    padding: 0px;
-}
-
-.button {
-    width: 67%;
-    height: 50PX;
-    background-color: #1178FF;
-    border: 1px solid #1178FF;
-    border-radius: 4px;
-    color: #fff;
-    font-size: 12px;
-    font-weight: 800;
-    cursor: pointer;
-    padding: 0.65rem;
-    text-align: center;
-}
-
-}
-
-@media only screen and (max-width: 332px) {
-
-   
+    .p-container {
+        
+        width: 100%;
+        
+    }
 
     .p-container input {
         
-        width: 56%;
-        margin-left: 0px;
-    }
-    
-    .p-container span select {
-        border-top-left-radius: 4px solid #e0e0e0;
-        border-bottom-left-radius: 4px solid #e0e0e0;
+        width: 53%;
         
-        width: 30px;
-        height: 50px;
+    }
+
+    .radio p {
+        font-size: 3px;
     }
     
-    
-    
+
+}
+
+
+
+@media only screen and (max-width: 350px) {
+
+    .pot {
+        width: 83%;
+        
     }
+
+    .put2 {
+        width: 83%;
+        
+    }
+    
+    .put1 {
+        width: 83%;
+        
+    }
+    
+    .pet {
+        width: 83%;
+       
+    }
+    
+    .pat {
+        width: 83%;
+        
+    }
+
+    .p-container span select {
+        width: 52px;
+        
+    }
+    
+    .p-container {
+        
+        width: 100%;
+        
+    }
+
+    .p-container input {
+        
+        width: 53%;
+        
+    }
+
+    .radio p {
+        font-size: 3px;
+    }
+    
+
+}
+
+@media only screen and (max-width: 334px) {
+
+    .pot {
+        width: 86%;
+        
+    }
+
+    .put2 {
+        width: 86%;
+        
+    }
+    
+    .put1 {
+        width: 86%;
+        
+    }
+    
+    .pet {
+        width: 86%;
+       
+    }
+    
+    .pat {
+        width: 86%;
+        
+    }
+
+    .p-container span select {
+        width: 52px;
+        
+    }
+    
+    .p-container {
+        
+        width: 100%;
+        
+    }
+
+    .p-container input {
+        
+        width: 53%;
+        
+    }
+
+    .radio p {
+        font-size: 3px;
+    }
+    
+
+}
+
+@media only screen and (max-width: 320px) {
+
+    .pot {
+        width: 97%;
+        
+    }
+
+    .put2 {
+        width: 97%;
+        
+    }
+    
+    .put1 {
+        width: 97%;
+        
+    }
+    
+    .pet {
+        width: 97%;
+       
+    }
+    
+    .pat {
+        width: 97%;
+        
+    }
+
+    .p-container span select {
+        width: 52px;
+        
+    }
+    
+    .p-container {
+        
+        width: 100%;
+        
+    }
+
+    .p-container input {
+        
+        width: 60%;
+        
+    }
+
+    .radio p {
+        font-size: 3px;
+    }
+    
+
+}
 
